tasks for project

--- a/app/views/book_vehicles/create.js.erb
+++ b/app/views/book_vehicles/create.js.erb
@@ -1,5 +1,31 @@
 <% if @book_vehicle.errors.any? %> 
   $('#adfhsdgfh .modal-body').html("<%= j (render :partial => 'form') %>");
 <% else %>
-  $('#adfhsdgfh').modal('hide');
+  $('#adfhsdgfh .modal-body').html("<%= j (render :partial => 'payment') %>");
 <% end %>
+
+
+var stripeResponseHandler;
+
+jQuery(function($) {
+  $('#payment-form').submit(function(event) {
+    var $form;
+    $form = $(this);
+    $form.find('button').prop('disabled', true);
+    Stripe.card.createToken($form, stripeResponseHandler);
+    return false;
+  });
+});
+
+stripeResponseHandler = function(status, response) {
+  var $form, token;
+  $form = $('#payment-form');
+  if (response.error) {
+    $form.find('.payment-errors').text(response.error.message);
+    $form.find('button').prop('disabled', false);
+  } else {
+    token = response.id;
+    $form.append($('<input type="hidden" name="stripeToken" />').val(token));
+    $form.get(0).submit();
+  }
+};
