--- a/app/views/book_vehicles/_form.html.erb
+++ b/app/views/book_vehicles/_form.html.erb
@@ -1,5 +1,4 @@
 <%= form_for @book_vehicle, remote: true do |f| %>
-
   <% if @book_vehicle.errors.any? %> <ul> 
   <% @book_vehicle.errors.full_messages.each do |msg| %> 
   <li><%= msg %></li>
@@ -14,7 +13,7 @@
 
   <div class="field">
     <%= f.label :v_cost, "Vehicle Cost" %>
-    <%= f.text_field :v_cost %>
+    <%= f.text_field :v_cost, value: @vehicle.cost %>
   </div>
 
   <div class="field">
@@ -42,4 +41,6 @@
   </div>
 
 <% end %>
+
+<%= link_to 'payment', payment_book_vehicles_path %>
 
