--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,12 @@
         margin: auto;
     }
     </style>
+
+     <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+
+  <script type="text/javascript">
+    Stripe.setPublishableKey('<%= STRIPE_PUBLIC_KEY %>');
+  </script>
   
   
   </head>
