--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -79,7 +79,7 @@
     <% end %>
   </div>
  </nav>
-<%= flash[:alert] %>
+<%= flash[:notice] %>
   <div class="container">
     <%= yield %>
   </div>
