--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<%= nested_form_for(resource, as: resource_name, url: registration_path(resource_name),html: { class: "form-horizontal" }) do |f| %>
+<%= nested_form_for(@user,html: { class: "form-horizontal" }) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="form-group">
@@ -65,10 +65,17 @@
     <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :roll_type %><br />
-    <%= f.select(:roll_type, options_for_select([["Admin", "admin"],["User", "user"]]), class: "form-control") %>
+  
+
+<%byebug%>
+
+<div class="form-group">
+    <%= f.label :roll_type,class: 'form-control hide'  %><br />
+ 
+    <%= f.text_field :roll_type , :value=>role_type,class: 'form-control hide' %>
+
   </div>
+
 
   <div class="form-group">
     <%= f.submit "Sign up" %>
