--- a/app/views/devise/registrations/_signup.html.erb
+++ b/app/views/devise/registrations/_signup.html.erb
@@ -24,7 +24,15 @@
         
 
 
-<%= nested_form_for(resource, as: resource_name, url: registration_path(resource_name),html: { class: "form-horizontal"}) do |f| %>
+<%#= nested_form_for(resource, as: resource_name, url: registration_path(resource_name),html: { class: "form-horizontal"}) do |f| %>
+
+<% if params[:user].present? %>
+
+<% @a= params[:user][:roll_type] %>
+<%= render "form", role_type: @a %>
+<% else %>
+
+<%= form_for @user do |f| %>
 <p>
 <div>
     <%= f.label :roll_type %>
@@ -33,7 +41,17 @@
   </p>
 
 <%= f.submit %>
+<% end %>
 <%end%>
+
+
+
+
+
+
+
+
+
 
    </div>   
       <div class="modal-footer">
