--- a/app/views/devise/registrations/_signup.html.erb
+++ b/app/views/devise/registrations/_signup.html.erb
@@ -23,34 +23,19 @@
       <hr/> 
         
 
+<% if params[:role_type]== nil %>
 
-<%#= nested_form_for(resource, as: resource_name, url: registration_path(resource_name),html: { class: "form-horizontal"}) do |f| %>
+<%= link_to "Admin", new_registration_path(resource_name, role_type: "admin" ) %><br />
 
-<% if params[:user].present? %>
-
-<% @a= params[:user][:roll_type] %>
-<%= render "form", role_type: @a %>
+ <%= link_to "User", new_registration_path(resource_name, role_type: "user" ) %><br />
+<%# @a= params[:user][:roll_type] %>
 <% else %>
+<%= render "form", role_type: @a %>
 
-<%= form_for @user do |f| %>
-<p>
-<div>
-    <%= f.label :roll_type %>
-    <%= f.select(:roll_type, options_for_select([["Admin", "admin"],["User", "user"]]), class: "form-control") %>
-  </div>
-  </p>
-
-<%= f.submit %>
-<% end %>
+ <%#- if devise_mapping.registerable? && controller_name != 'registrations' %>
+          
+        <%# end -%>
 <%end%>
-
-
-
-
-
-
-
-
 
 
    </div>   
