--- a/app/views/book_vehicles/show.html.erb
+++ b/app/views/book_vehicles/show.html.erb
@@ -9,7 +9,9 @@
     </div>
   <%#end%>
 <%end%>
-
+<h1>
+  <%= link_to 'JQUERY', jquerywork_book_vehicles_path  %>
+</h1>
 
 <h1>Drag and Drop</h1>
 
