--- a/app/views/book_vehicles/jquerywork.html.erb
+++ b/app/views/book_vehicles/jquerywork.html.erb
@@ -1,143 +1,204 @@
 <div>
-<table border="10px">
-<tr>
-	<td colspan="4"><input id="calculate" type="text" name="" style="width: 100px;"></td>
-</tr>
+	<table border="10px">
+		<tr>
+			<td colspan="4"><input id="calculate" type="text" name="" style="width: 100px;"></td>
+		</tr>
 
-<tr>
-	<td><input type=button value="7" class="my_button"></td>
-	<td><input type=button value="8" class="my_button"></td>
-	<td><input type=button value="9" class="my_button"></td>
-	<td><input type=button value="*" class="my_button"></td>
-</tr>
+		<tr>
+			<td><input type=button value="7" onclick="my_button(event)"></td>
+			<td><input type=button value="8" onclick="my_button(event)"></td>
+			<td><input type=button value="9" onclick="my_button(event)"></td>
+			<td><input type=button value="*" onclick="my_button(event)"></td>
+		</tr>
 
-<tr>
-	<td><input type=button value="4" class="my_button"></td>
-	<td><input type=button value="5" class="my_button"></td>
-	<td><input type=button value="6" class="my_button"></td>
-	<td><input type=button value="-" class="my_button"></td>
-</tr>
+		<tr>
+			<td><input type=button value="4" onclick="my_button(event)"></td>
+			<td><input type=button value="5" onclick="my_button(event)"></td>
+			<td><input type=button value="6" onclick="my_button(event)"></td>
+			<td><input type=button value="-" onclick="my_button(event)"></td>
+		</tr>
 
-<tr>
-	<td><input type=button value="1" class="my_button"></td>
-	<td><input type=button value="2" class="my_button"></td>
-	<td><input type=button value="3" class="my_button"></td>
-	<td><input type=button value="+" class="my_button"></td>
-</tr>
+		<tr>
+			<td><input type=button value="1" onclick="my_button(event)"></td>
+			<td><input type=button value="2" onclick="my_button(event)"></td>
+			<td><input type=button value="3" onclick="my_button(event)"></td>
+			<td><input type=button value="+" onclick="my_button(event)"></td>
+		</tr>
 
-<tr>
-	<td><input type=button value="0" class="my_button"></td>
-	<td><input type=button value="." class="my_button"></td>
-	<td><input type=button value="=" class="my_button"></td>
-	<td><input type=button value="%" class="my_button" ></td>
-</tr>
+		<tr>
+			<td><input type=button value="0" onclick="my_button(event)"></td>
+			<td><input type=button value="." onclick="my_button(event)"></td>
+			<td><input type=button value="=" onclick="my_button(event)"></td>
+			<td><input type=button value="%" onclick="my_button(event)" ></td>
+		</tr>
 
-<tr>
-	<td><input type=button value="-" class="my_button"></td>
-	<td><input type=button value="/" class="my_button"></td>
-	<td><input type=button value="*" class="my_button"></td>
-	<td><input type=button value="c" class="my_button" style="color: Red;"></td>
-</tr>
-
-</table>
+		<tr>
+			<td><input type=button value="-" onclick="my_button(event)"></td>
+			<td><input type=button value="/" onclick="my_button(event)"></td>
+			<td><input type=button value="*" onclick="my_button(event)"></td>
+			<td><input type=button value="c" onclick="my_button(event)" style="color: Red;"></td>
+		</tr>
+	</table>
 </div>
 
 <script>
-var x,y;
-  $('.my_button').click(function(){
-  	if($.isNumeric(this.value))
-	  {
-		  x = $('#calculate').val() + this.value;
-      $('#calculate').val(x);
-      
-    }
-    else if(this.value != "=")
-    {
-      $('#calculate').val("");
-      $('#calculate').val(this.value);
-      y=x + this.value;
-      $('#calculate').val("");
-    }
-     else if(this.value == "c")
-    {
-      x=null;y=null;
-      $('#calculate').val("");
-    }
-    else
-    {
-    	 y=y+x;
-	    $('#calculate').val("");
-      y=eval(y);
-      $('#calculate').val(y);
-    }
-});
-// $('.my_button').click(function(){
-// 	value_add = $("#calculate").val() + this.value
-//   $("#calculate").val(value_add);
-// });
-// $('#calculate_value').click(function(){
-// 	value_add = eval($("#calculate").val());
-//   $("#calculate").val(value_add);
-// });
-// $('#clear').click(function(){
-// 	$("#calculate").val('');
-// });
 
-  // $('.my_button').click(function(){	   
-	 // 	if(x == null)
-	 // 	{
-  //     x = parseInt($(this).val());
-  //     value = x;
-  //     $('#button').val(value);
-	 // 	}
-	 // 	else if(y == null &&)
-	 // 	{	 	 
-  //     y = $(this).val();
-  //     value = y;
-  //     $('#button').val(value);
-  //   }
-  //   else if(z == null)
-  //   {   	
-  //  	  z = parseInt($(this).val());
-  //     value = z;
-  //     $('#button').val(value);
-  //   }
+// var x,y;
+// 	function my_button(e) 
+// 	{
+// 		if(e.target.value == "=")
+// 	  {
+// 		  $('#calculate').val("");
+// 		  $('#calculate').val(y);
+// 	  }
+// 	  else
+// 	  {
+// 		  x = $('#calculate').val() + e.target.value;
+// 		  $('#calculate').val(x);
+// 		  y=eval(x);
+// 	  }
 
-   
-  //  if($(this).val()=="=" && (x!= null && y!= null && z!= null))
-  //  {
-  //     if(y == "+")
-  //     {
-  //       var cal=x+z;
-  //       $('#button').val(cal);
-  //     }
-  //     else if(y == "-")
-  //     {
-  //       var cal=x-z;
-  //       $('#button').val(cal); 
-  //     }
-  //     else if(y == "*")
-  //     {
-  //       var cal=x*z;
-  //       $('#button').val(cal); 
-  //     }
-  //     else if(y == "/")
-  //     { 
-  //       var cal=x/z;
-  //       $('#button').val(cal); 
-  //     }
-  //     else if(y == "%")
-  //     { 
-  //       var cal=x%z;
-  //       $('#button').val(cal); 
-  //     }
-  	
-  //   }
+// }
+function my_button(e)
+{
+	switch(e.target.value) 
+	{
+		case "=":
+		$('#calculate').val("");
+		$('#calculate').val(y);
+		break;
+		case "c":
+		$('#calculate').val("");
+		break;
+		default:
+		x = $('#calculate').val() + e.target.value;
+		$('#calculate').val(x);
+		y=eval(x);
+	}
+}
 
-  //   if($(this).val()=="c")
-  //   {
-  //     $('#button').val("");
-  //   }
 
-  // });
+
+
+
+	// $('.my_button').click(function(){
+	// 	value_add = $("#calculate").val() + this.value
+	//   $("#calculate").val(value_add);
+	// });
+	// $('#calculate_value').click(function(){
+	// 	value_add = eval($("#calculate").val());
+	//   $("#calculate").val(value_add);
+	// });
+	// $('#clear').click(function(){
+	// 	$("#calculate").val('');
+	// });
+
+	  // $('.my_button').click(function(){	   
+		 // 	if(x == null)
+		 // 	{
+	  //     x = parseInt($(this).val());
+	  //     value = x;
+	  //     $('#button').val(value);
+		 // 	}
+		 // 	else if(y == null &&)
+		 // 	{	 	 
+	  //     y = $(this).val();
+	  //     value = y;
+	  //     $('#button').val(value);
+	  //   }
+	  //   else if(z == null)
+	  //   {   	
+	  //  	  z = parseInt($(this).val());
+	  //     value = z;
+	  //     $('#button').val(value);
+	  //   }
+
+	   
+	  //  if($(this).val()=="=" && (x!= null && y!= null && z!= null))
+	  //  {
+	  //     if(y == "+")
+	  //     {
+	  //       var cal=x+z;
+	  //       $('#button').val(cal);
+	  //     }
+	  //     else if(y == "-")
+	  //     {
+	  //       var cal=x-z;
+	  //       $('#button').val(cal); 
+	  //     }
+	  //     else if(y == "*")
+	  //     {
+	  //       var cal=x*z;
+	  //       $('#button').val(cal); 
+	  //     }
+	  //     else if(y == "/")
+	  //     { 
+	  //       var cal=x/z;
+	  //       $('#button').val(cal); 
+	  //     }
+	  //     else if(y == "%")
+	  //     { 
+	  //       var cal=x%z;
+	  //       $('#button').val(cal); 
+	  //     }
+	  	
+	  //   }
+
+	  //   if($(this).val()=="c")
+	  //   {
+	  //     $('#button').val("");
+	  //   }
+
+	  // });
+
+
+
+
+
+	// var x,y;
+	// $('.my_button').click(function(){
+	// 	if($.isNumeric(this.value))
+	// 	{
+	// 		x = $('#calculate').val() + this.value;
+	// 		$('#calculate').val(x);
+	// 	}
+	// 	else if(this.value == "=")
+	// 	{
+	// 		y=y+x;
+	// 		$('#calculate').val("");
+	// 		y=eval(y);
+	// 		$('#calculate').val(y);      
+	// 	}
+	// 	else if(this.value == "c")
+	// 	{
+	// 		x=null;y=null;
+	// 		$('#calculate').val("");
+	// 	}
+	// 	else
+	// 	{
+	// 		$('#calculate').val("");
+	// 		$('#calculate').val(this.value);
+	// 		y=x + this.value;
+	// 		$('#calculate').val("");
+	// 	}
+	// });
 </script>
+<!-- <br/>
+<div>lklkll
+<br/>
+<span>rrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrr<br/>
+  <p>ooooooooooooooooooooooooooooooooooooooooooooo</p>
+  </span>
+</div>​
+
+
+
+<script type="text/javascript">
+	
+	$("div").click(function(e){
+  alert(e.target);
+  alert(this);
+});
+
+
+</script> -->
