--- a/app/views/vehicles/_form.html.erb
+++ b/app/views/vehicles/_form.html.erb
@@ -1,5 +1,10 @@
 <%= nested_form_for(@vehicle, html: { class: "form-horizontal" }) do |f| %>
-
+<% if @vehicle.errors.any? %> <ul> 
+  <% @vehicle.errors.full_messages.each do |msg| %> 
+  <li><%= msg %></li>
+   <% end %> 
+   </ul>
+   <% end %>
   <div class="form-group">
 	  <%= label_tag :name, "Vehicle Name", class: "control-label col-sm-2" %>
 	  <div class="col-sm-10">
